--- a/common.id_ID.po
+++ b/common.id_ID.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-22 07:22+0200\n"
+"POT-Creation-Date: 2023-06-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: red koala, 2023\n"
 "Language-Team: Indonesian (Indonesia) (http://app.transifex.com/team-xonotic/"
@@ -4389,9 +4389,7 @@ msgstr ""
 "Pertandingan ini terbatas pada ^F2%s^BG pemain."
 
 #: qcsrc/common/notifications/all.inc:716
-msgid ""
-"^K1You aren't allowed to play because you are banned in this server, but you "
-"can play minigames"
+msgid "^K1You aren't allowed to play because you are banned in this server"
 msgstr ""
 
 #: qcsrc/common/notifications/all.inc:720
