--- a/common.it.po
+++ b/common.it.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-22 07:22+0200\n"
+"POT-Creation-Date: 2023-06-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: Antonio <piuntn@gmail.com>, 2013-2023\n"
 "Language-Team: Italian (http://app.transifex.com/team-xonotic/xonotic/"
@@ -4531,12 +4531,8 @@ msgstr ""
 "Questa partita è limitata a ^F2%s^BG giocatori."
 
 #: qcsrc/common/notifications/all.inc:716
-msgid ""
-"^K1You aren't allowed to play because you are banned in this server, but you "
-"can play minigames"
+msgid "^K1You aren't allowed to play because you are banned in this server"
 msgstr ""
-"^K1Non ti è permesso giocare perché sei bannato in questo server, ma puoi "
-"giocare i minigiochi"
 
 #: qcsrc/common/notifications/all.inc:720
 msgid "^BGYou picked up the ball"
