--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -4487,7 +4487,7 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:716
 msgid "^K1You aren't allowed to play because you are banned in this server"
-msgstr ""
+msgstr "^K1Não é permitido você jogar porque você está banido neste servidor"
 
 #: qcsrc/common/notifications/all.inc:720
 msgid "^BGYou picked up the ball"
