--- a/common.zh_TW.po
+++ b/common.zh_TW.po
@@ -2958,7 +2958,7 @@ msgstr "^BG%s^K1 再也遭不住了%s%s"
 #: qcsrc/common/notifications/all.inc:335
 #, c-format
 msgid "^BG%s^K1 is now preserved for centuries to come%s%s"
-msgstr "^BG%s^K1 被埋在土裡去度過下一世紀%s%s"
+msgstr "^BG%s^K1 被埋在土裡見證歷史%s%s"
 
 #: qcsrc/common/notifications/all.inc:336
 #, c-format
@@ -3300,7 +3300,7 @@ msgstr "^TC^TT隊^BG發電機被摧毀"
 
 #: qcsrc/common/notifications/all.inc:417
 msgid "^TC^TT^BG generator spontaneously combusted due to overtime!"
-msgstr "^TC^TT隊^BG發電機因超時而自然燃盡！"
+msgstr "^TC^TT隊^BG發電機在超時後自然燃盡！"
 
 #: qcsrc/common/notifications/all.inc:419
 #, c-format
@@ -3453,15 +3453,13 @@ msgstr "^BG你不被應許更換團隊"
 msgid ""
 "^F4NOTE: ^BGThe server is running ^F1Xonotic %s (beta)^BG, you have "
 "^F2Xonotic %s"
-msgstr ""
-"^F4注意：^BG此伺服器在執行 ^F1Xonotic %s (beta)^BG，此客戶端為 ^F2Xonotic %s"
+msgstr "^F4注意：^BG此伺服器是 ^F1Xonotic %s (beta)^BG，你在遊玩 ^F2Xonotic %s"
 
 #: qcsrc/common/notifications/all.inc:457
 #, c-format
 msgid ""
 "^F4NOTE: ^BGThe server is running ^F1Xonotic %s^BG, you have ^F2Xonotic %s"
-msgstr ""
-"^F4注意：^BG此伺服器在執行 ^F1Xonotic %s^BG，你的客戶端為 ^F2Xonotic %s"
+msgstr "^F4注意：^BG此伺服器是 ^F1Xonotic %s^BG，你在遊玩 ^F2Xonotic %s"
 
 #: qcsrc/common/notifications/all.inc:458
 #, c-format
@@ -3469,6 +3467,8 @@ msgid ""
 "^F4NOTE: ^F1Xonotic %s^BG is out, and you still have ^F2Xonotic %s^BG - get "
 "the update from ^F3https://xonotic.org^BG!"
 msgstr ""
+"^F4注意: ^F1Xonotic %s^BG 已釋出，但你在遊玩 ^F2Xonotic %s^BG——可到 "
+"^F3https://xonotic.org^BG 下載更新！"
 
 #: qcsrc/common/notifications/all.inc:460
 #, c-format
@@ -3534,7 +3534,7 @@ msgstr "^BG%s^K1 被自己的滅世炸上了天%s%s"
 #: qcsrc/common/notifications/all.inc:472
 #, c-format
 msgid "^BG%s%s^K1 was blasted by ^BG%s^K1's Electro bolt%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 的電射槍光束爆破了%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 的電射槍光束爆破%s%s"
 
 #: qcsrc/common/notifications/all.inc:473
 #, c-format
@@ -3713,7 +3713,7 @@ msgstr "^BG%s^K1 被自己的絕滅火箭炮鏈鋸炸飛了%s%s"
 #: qcsrc/common/notifications/all.inc:507
 #, c-format
 msgid "^BG%s%s^K1 was gunned down by ^BG%s^K1's Overkill Shotgun%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 用絕滅霰彈槍擊倒%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 用絕滅霰彈槍擊殺%s%s"
 
 #: qcsrc/common/notifications/all.inc:508
 #, c-format
@@ -3723,17 +3723,17 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 用步槍狙擊%s%s"
 #: qcsrc/common/notifications/all.inc:509
 #, c-format
 msgid "^BG%s%s^K1 died in ^BG%s^K1's Rifle bullet hail%s%s"
-msgstr "^BG%s%s^K1 死在了 ^BG%s^K1 的步槍彈下%s%s"
+msgstr "^BG%s%s^K1 死於 ^BG%s^K1 的步槍突擊%s%s"
 
 #: qcsrc/common/notifications/all.inc:510
 #, c-format
 msgid "^BG%s%s^K1 failed to hide from ^BG%s^K1's Rifle bullet hail%s%s"
-msgstr "^BG%s%s^K1 沒能逃過 ^BG%s^K1 的步槍彈%s%s"
+msgstr "^BG%s%s^K1 沒能躲過 ^BG%s^K1 的步槍突擊%s%s"
 
 #: qcsrc/common/notifications/all.inc:511
 #, c-format
 msgid "^BG%s%s^K1 failed to hide from ^BG%s^K1's Rifle%s%s"
-msgstr "^BG%s%s^K1 沒能逃過 ^BG%s^K1 的步槍攻擊%s%s"
+msgstr "^BG%s%s^K1 沒能躲過 ^BG%s^K1 的步槍%s%s"
 
 #: qcsrc/common/notifications/all.inc:512
 #, c-format
@@ -3753,22 +3753,22 @@ msgstr "^BG%s^K1 試圖把玩跟蹤火箭%s%s"
 #: qcsrc/common/notifications/all.inc:515
 #, c-format
 msgid "^BG%s%s^K1 was gunned down by ^BG%s^K1's Shockwave%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 用脈衝槍擊倒%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 用脈衝槍擊殺%s%s"
 
 #: qcsrc/common/notifications/all.inc:516
 #, c-format
 msgid "^BG%s%s^K1 slapped ^BG%s^K1 around a bit with a large Shockwave%s%s"
-msgstr "^BG%s%s^K1 用脈衝槍把 ^BG%s^K1 搧得再起不能%s%s"
+msgstr "^BG%s%s^K1 用脈衝槍把 ^BG%s^K1 擊倒%s%s"
 
 #: qcsrc/common/notifications/all.inc:517
 #, c-format
 msgid "^BG%s%s^K1 was gunned down by ^BG%s^K1's Shotgun%s%s"
-msgstr "^BG%s%s^K1 被 ^BG%s^K1 用霰彈槍擊倒%s%s"
+msgstr "^BG%s%s^K1 被 ^BG%s^K1 用霰彈槍擊殺%s%s"
 
 #: qcsrc/common/notifications/all.inc:518
 #, c-format
 msgid "^BG%s%s^K1 slapped ^BG%s^K1 around a bit with a large Shotgun%s%s"
-msgstr "^BG%s%s^K1 用大霰彈槍把 ^BG%s^K1 搧得再起不能%s%s"
+msgstr "^BG%s%s^K1 用大霰彈槍把 ^BG%s^K1 擊倒%s%s"
 
 #: qcsrc/common/notifications/all.inc:519
 #, c-format
@@ -4402,7 +4402,7 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:716
 msgid "^K1You aren't allowed to play because you are banned in this server"
-msgstr ""
+msgstr "^K1由於你被此伺服器封禁，你不可以加入遊戲"
 
 #: qcsrc/common/notifications/all.inc:720
 msgid "^BGYou picked up the ball"
@@ -6217,8 +6217,8 @@ msgid ""
 "player name to get started.  You can change these options later through the "
 "menu system."
 msgstr ""
-"歡迎來到 Xonotic，請選擇你的語言、輸入玩家名稱以開始。這些選項隨後可以在有關"
-"選項修改。"
+"歡迎來到 Xonotic。 請選擇你的語言、輸入玩家名稱以開始游戏。 這些選項可以隨後"
+"在菜单更改。"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:50
 #: qcsrc/menu/xonotic/dialog_settings_input_userbind.qc:28
